--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 कक्षा 10 सामाजिक विज्ञान नोट्स</p>
+        <p>© 2024 ALONE FLYER'S LEARNING</p>
     </footer>
      <script src="script.js"></script>
      <script src="itihas.js"></script>
